<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Španělština</string>
    <string name="action_settings">Nastavení</string>
    <string name="exit">Konec</string>
    <string name="statistics">Statistika</string>
    <string name="lessons">Lekce</string>
    <string name="lesson1">Lekce 1</string>
    <string name="lesson2">Lekce 2</string>
    <string name="lesson3">Lekce 3</string>
    <string name="lessons_dialog_title">Vyber si lekci</string>
    <string name="dialog_cancel">Zrušit</string>
    <string name="pref_language">Jazyk</string>
    <string name="pref_revert">Otočit směr překladu</string>

</resources>
