<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/lessons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/lessons"/>

        <Button
            android:text="@string/statistics"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/statistics" />

        <Button
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/exit" />
    </LinearLayout>

</RelativeLayout>