<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/lesson1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/lesson1"/>

        <Button
            android:text="@string/lesson2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/lesson2" />

        <Button
            android:text="@string/lesson3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/lesson3" />
    </LinearLayout>

</RelativeLayout>