<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/word"/>

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/lessons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/opt1"/>

        <Button
            android:text="@string/statistics"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/opt2" />

        <Button
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/opt3" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/result"/>

</RelativeLayout>